# hello-docker-cpp

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  install-ffmpeg.sh
.github/workflows/: cmake_build.yml
src/: CMakeLists.txt  config.yml.in  main.cpp  pipeline.cpp  pipeline.h
